FP-1083: Fix sidebar link color contrast
- Update hover and active states to pass color contrast.

--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -11,11 +11,12 @@ $width: 215px;
     padding-top: 20px;
 }
 
-.link,
-.link:hover {
-  color: #707070;
+.link {
+  color: var(--global-color-primary--dark);
 }
+.link:hover,
 .link--active {
+  color: var(--global-color-primary--x-dark); /* to pass color contrast test */
   background-color: var(--global-color-accent--weak);
 }
 
